--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "dependencies": {
         "@radix-ui/react-separator": "^1.1.1",
         "@radix-ui/react-slot": "^1.1.1",
+        "@radix-ui/react-tabs": "^1.1.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lodash": "^4.17.21",
         "lucide-react": "^0.471.0",
+        "react-tabs": "^6.1.0",
         "tailwind-merge": "^2.6.0",
         "tailwindcss-animate": "^1.0.7"
     }
